crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__operator__not_class.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/not_class.lox
---
success: false
exit_code: 70
----- stdout -----
false

----- stderr -----
Error: not callable: `<class Bar at [POINTER]>` is of type `Class`
   ╭─[craftinginterpreters/test/operator/not_class.lox:3:8]
   │
 3 │ print !Bar();    // expect: false
   │        ─┬─  
   │         ╰─── this expression is of type `Class`
───╯
